src/test/ui/union/union-repr-c.stderr
error: `extern` block uses type `W` which is not FFI-safe: this union has unspecified layout
  --> $DIR/union-repr-c.rs:25:22
   |
LL |     static FOREIGN2: W; //~ ERROR union has unspecified layout
   |                      ^
   |
note: lint level defined here
  --> $DIR/union-repr-c.rs:12:9
   |
LL | #![deny(improper_ctypes)]
   |         ^^^^^^^^^^^^^^^
   = help: consider adding a #[repr(C)] attribute to this union
note: type defined here
  --> $DIR/union-repr-c.rs:19:1
   |
LL | / union W {
LL | |     a: u8,
LL | | }
   | |_^

error: aborting due to previous error

